<resources>
    <string name="app_name">GoStrada</string>
    <string name="welcome_to">Welcome To</string>
    <string name="iik_strada">IIK STRADA</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="nim">NIM</string>
    <string name="password">Password</string>
    <string name="menu_open">Menu Open</string>
    <string name="qr_code">QR Code</string>
    <string name="student_activity">Student Activity</string>
    <string name="image_bg_main">Image Dashboard</string>
    <string name="semester">Semester V/T.A 2021/2020</string>
    <string name="ipk">IPK</string>
    <string name="nilai_ipk">3.52</string>
    <string name="ip_sem">IP Sem IV</string>
    <string name="nilai_ip_sem">3.21</string>
    <string name="spp">SPP</string>
    <string name="nilai_spp">-4.500.000-</string>
    <string name="sks">SKS</string>
    <string name="nilai_sks">96</string>
    <string name="sisa_sks">Sisa SKS</string>
    <string name="nilai_sisa_sks">100</string>
    <string name="mk_sem">MK Sem V</string>
    <string name="nilai_mk_sem">5</string>
    <string name="sks_sem">SKS Sem V</string>
    <string name="nilai_sks_sem">20</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="menu_class">Class</string>
    <string name="consult">Consult</string>
    <string name="nama_user">Hendrik Chrisnaedy</string>
    <string name="jurusan_user">S1 Kesehatan Masyarakat</string>
    <string name="nim_user">211120002</string>
    <string name="kalender_akademik">Kalender Akademik</string>
    <string name="jadwal_kuliah">Jadwal Kuliah</string>
    <string name="absensi">Absensi</string>
    <string name="request_surat">Request Surat</string>
    <string name="riwayat_krs">Riwayat KRS</string>
    <string name="lihat_khs">Lihat KHS</string>
    <string name="transkrip_nilai">Transkrip Nilai</string>
    <string name="pembayaran_spp">Pembayaran SPP</string>
    <string name="non_akademik">Non Akademik</string>
    <string name="open_drawer">open drawer</string>
    <string name="icon_bell">icon bell</string>
    <string name="icon_message">icon message</string>
    <string name="kuliah">Kuliah Metodologi Penelitian</string>
    <string name="jam">12:00 sd 13.45 wib</string>
    <string name="dosen">DR. Yuli Prestiowati, M.Kes</string>
    <string name="update_data">Update Data</string>
    <string name="tanggal_lahir">Kediri , 12 Februari 1977</string>
    <string name="alamat">Perum  Betet Town House</string>
    <string name="nomer_telepon">081259055527</string>
    <string name="email">admin@gmail.com</string>
    <string name="domisisili_sementara">Domisili sementara / Kost</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="tag_freind">Tag Friend</string>
    <string name="remind_me">Remind Me</string>
</resources>