<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="#4A4481">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/ll_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/user_icon"
                app:civ_border_color="@color/dixie"
                app:civ_border_width="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_user"
                    android:textColor="@color/whisper" />

                <TextView
                    android:id="@+id/tv_user_jurusan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jurusan_user"
                    android:textColor="@color/whisper" />

                <TextView
                    android:id="@+id/tv_nim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nim_user"
                    android:textColor="@color/whisper" />

            </LinearLayout>

        </LinearLayout>


        <ImageButton
            android:id="@+id/dw_open"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/open_drawer"
            android:src="@drawable/ic_drawer_open"
            app:tint="@color/whisper"/>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_bell_line"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/icon_bell"
            app:tint="@color/whisper"/>


        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_msg_toolbar"
            android:background="@android:color/transparent"
            android:contentDescription="@string/icon_message"
            android:layout_gravity="end"
            app:tint="@color/whisper" />

    </androidx.appcompat.widget.Toolbar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>