<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:background="@color/violet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="29dp"
            android:src="@drawable/ic_menu_close"
            android:layout_gravity="start|center"
            android:contentDescription="@string/menu_open"/>

        <ImageView
            android:layout_width="166dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_lg_login"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_qr_code"
            android:contentDescription="@string/qr_code"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/qr_code"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/edge_water50"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/heathered_gray"
        android:fontFamily="@font/poppins"
        android:text="@string/student_activity"
        android:textSize="24sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/scorpion"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</LinearLayout>